--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,14 +15,14 @@
 <body>
     <nav class="navbar navbar-expand-md navigation-bar">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="index.html"> <img src="../static/wild-animals.png" width="40" height="40"> THEWILDWORLD</a>
+          <a class="navbar-brand logo" href="/"> <img src="../static/wild-animals.png" width="40" height="40"> THEWILDWORLD</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 ">
               <li class="nav-item">
-                <a class="nav-link link-item" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link link-item" aria-current="page" href="/">Home</a>
               </li>
               {% if session["user_id"] %}
                   <li class="nav-item">
@@ -73,7 +73,6 @@
             <div class="contacts">
                 <h2>Contact</h2>
                 <a href="#">Linkdin</a>
-                <a href="#">Facebook</a>
                 <a href="#">Github</a>
             </div>
         </div>
